<resources>
    <string name="app_name">Dosac</string>
    <string name="title_home">Home</string>
    <string name="title_guidelines">Guidelines</string>
    <string name="title_medicine">Medication</string>

    <string name="title_settings">Settings</string>
    <string name="title_indications">Indications</string>
    <string name="title_adult_dose">Adult Dose</string>
    <string name="title_child_dose">Child Dose</string>
    <string name="title_contra">Contraindications</string>
    <string name="title_side_effects">Side effects</string>
    <string name="title_additional">Additional Information</string>
    <string name="title_assessment">Assessment</string>
    <string name="title_paediatric">Paediatric</string>
    <string name="title_major_accident">Major Emergency</string>
    <string name="title_miscellaneous">Miscellaneous</string>
    <string name="title_hospitals">Hospital Numbers</string>
    <string name="title_hospitals_menu">Hospitals</string>
    <string name="main_phone">Main</string>
    <string name="er_phone">Emergency</string>
    <string name="menu_settings">Settings</string>
    <string name="calculate_dosage">Calculate Dosage</string>
    <string name="dosage_calculation"> - dosage calculation</string>
    <string name="synchronize_title">Synchronize</string>
    <string name="synchronize_syncing">Synchronizing…</string>
    <string name="synchronize_subtitle">Keep the application data up to date</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start_hint_header">Welcome</string>
    <string name="start_hint_content">You can change your settings\nanytime by clicking here.</string>
    <string name="start_hint_search_content">Medicines can be found quickly\nby clicking here</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter search text</string>
    <string name="disclaimer_text">This app is for 2014 CPGs only.\n\nThese guidelines were taken from the PHECC website (www.phecit.ie).</string>
    <string name="disclaimer_button_text">Acknowledge</string>
    <string name="disclaimer_title">Disclaimer</string>
</resources>
